# Rust-FNN

./: Cargo.toml  README.md  prediction_plot.html
examples/: test.rs
playground/: plot_testing.rs  training_testing.rs
src/: lib.rs
src/benchmark_functions/: analytic.rs
src/learning/nnet/: mod.rs
src/learning/optim/: grad_desc.rs
src/plot/: plot_comparison.rs
