[package]
name = "rusty-machine"
version = "0.5.4"
authors = ["AtheMathmo"]

description = "A machine learning library."
repository = "https://github.com/AtheMathmo/rusty-machine"
documentation = "https://AtheMathmo.github.io/rusty-machine/"
keywords = ["machine","learning","stats","data","machine-learning"]
categories = ["science"]
readme = "README.md"
license = "MIT"

[features]
stats = []
datasets = []

[[bin]]
name = "plot_testing"
path = "playground/plot_testing.rs"
[[bin]]
name = "training_testing"
path = "playground/training_testing.rs"


[dependencies]
num = { version = "0.1.41", default-features = false }
rand = "0.4.1"
rulinalg = { git = "https://github.com/AtheMathmo/rulinalg", rev = "1ed8b937" }
plotters = "0.3.7"
